@@ -3,9 +3,11 @@ package crimsonedgehope.minecraft.fabric.socksproxyclient.i18n;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import net.minecraft.text.Text;
+import net.minecraft.text.TranslatableText;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public final class TranslateKeyUtil {
@@ -22,15 +24,15 @@ public final class TranslateKeyUtil {
     }
 
     public static Text itemAsText(String prefix, Collection<String> subs) {
-        return Text.translatable(item(prefix, subs));
+        return new TranslatableText(item(prefix, subs));
     }
 
     public static String item(String prefix, String... subs) {
-        return item(prefix, Arrays.stream(subs).toList());
+        return item(prefix, Arrays.stream(subs).collect(Collectors.toList()));
     }
 
     public static Text itemAsText(String prefix, String... subs) {
-        return Text.translatable(item(prefix, subs));
+        return new TranslatableText(item(prefix, subs));
     }
 
     public static String item(Collection<String> subs) {
@@ -38,15 +40,15 @@ public final class TranslateKeyUtil {
     }
 
     public static Text itemAsText(Collection<String> subs) {
-        return Text.translatable(item(subs));
+        return new TranslatableText(item(subs));
     }
 
     public static String configItem(String... subs) {
-        return configItem(Arrays.stream(subs).toList());
+        return configItem(Arrays.stream(subs).collect(Collectors.toList()));
     }
 
     public static Text configItemAsText(String... subs) {
-        return Text.translatable(configItem(subs));
+        return new TranslatableText(configItem(subs));
     }
 
     public static String configItem(Collection<String> subs) {
@@ -54,6 +56,6 @@ public final class TranslateKeyUtil {
     }
 
     public static Text configItemAsText(Collection<String> subs) {
-        return Text.translatable(configItem(subs));
+        return new TranslatableText(configItem(subs));
     }
 }
